# binja-arcompact

./: .gitignore  CMakeLists.txt  README.md  arch_arcompact.cpp  arcompact_il.cpp  arcompact_il.h  plugin.json
.github/workflows/: build.yaml
arcompact/: arcompact.cpp  arcompact.h  test.cpp
